Added basic packages.

--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "@commercetools/platform-sdk": "^2.2.0",
     "@commercetools/sdk-client-v2": "^1.0.2",
+    "@emotion/react": "^11.10.8",
+    "@emotion/styled": "^11.10.8",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "buffer": "^6.0.3",
     "clean-webpack-plugin": "^4.0.0",
     "crypto-browserify": "^3.12.0",
@@ -16,7 +18,12 @@
     "node-fetch": "^2.1.0",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "path-browserify": "^1.0.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.0.2",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.1",
+    "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^2.0.0"
   },
